--- a/index.html
+++ b/index.html
@@ -1500,7 +1500,7 @@
   <!-- partial:index.partial.html -->
   <div class="scene">
     <article class="book" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-    <section class="page flipped">
+    <section class="page active">
       <div class="front">
         <img src="pages/1.jpg" alt="" width="700px" height="500px">
       </div>
@@ -1508,7 +1508,7 @@
         <img src="pages/2.jpg" alt="" width="700px" height="500px">
       </div>
     </section>
-    <section class="page flipped">
+    <section class="page">
       <div class="front">
         <img src="pages/3.jpg" alt="" width="700px" height="500px">
       </div>
@@ -1516,7 +1516,7 @@
         <img src="pages/4.jpg" alt="" width="700px" height="500px">
       </div>
     </section>
-      <section class="page active">
+      <section class="page">
       <div class="front">
         <img src="pages/5.jpg" alt="" width="700px" height="500px">
       </div>
